// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path 1 path component 1`] = `
Array [
  "",
  <strong>
    a
  </strong>,
]
`;

exports[`Path 2 path components 1`] = `
Array [
  <span
    className="text-muted"
  >
    a
    /
  </span>,
  <strong>
    b
  </strong>,
]
`;

exports[`Path 3 path components 1`] = `
Array [
  <span
    className="text-muted"
  >
    a/b
    /
  </span>,
  <strong>
    c
  </strong>,
]
`;

exports[`Path no path components 1`] = `null`;
